--- a/android/app/src/main/res/drawable/bg_overlay_gradient.xml
+++ b/android/app/src/main/res/drawable/bg_overlay_gradient.xml
@@ -1,7 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <corners android:radius="22dp"/>
     <gradient
-        android:startColor="#0797FD"
-        android:endColor="#109EDB"
-        android:angle="270" />
+        android:angle="90"
+        android:startColor="#22A7FF"
+        android:endColor="#0A86E6"
+        android:type="linear"/>
 </shape>
+
+
+    <!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<shape xmlns:android="http://schemas.android.com/apk/res/android">-->
+<!--    <gradient-->
+<!--        android:startColor="#0797FD"-->
+<!--        android:endColor="#109EDB"-->
+<!--        android:angle="270" />-->
+<!--</shape>-->
